--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -10,7 +10,7 @@
     background-color:$rose ;
     background-color:$violet;
     background: linear-gradient(to bottom right,#FF79DA, #9356DC);
-    border-left:none;
+    border:none;
     border-radius: 20px;
     box-shadow: 0 3px 15px 0 #9356DC;
     transition: 0.3s;
