--- a/sass/layout/_section.scss
+++ b/sass/layout/_section.scss
@@ -177,7 +177,8 @@ ul img{
 .texte-carte-restaurants{
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    width: 100%;
+    justify-content:space-between;
     padding:0px 16px;
     font-size:12px;
 }
