--- a/public/css/style.css
+++ b/public/css/style.css
@@ -645,11 +645,11 @@ ul img {
 
 .carre {
   background-color: #fff;
-  width: 20px;
+  width: 22px;
   height: 20px;
   position: relative;
   top: -20px;
-  left: 0;
+  left: -1px;
   z-index: 0;
   transform: scaleY(1);
   transform-origin: top;
@@ -764,7 +764,7 @@ ul img {
 
 .menu {
   width: 100%;
-  height: 235px;
+  height: auto;
   gap: 10px;
 }
 @media screen and (min-width: 768px) and (max-width: 992px) {
@@ -980,7 +980,7 @@ ul img {
 
 footer {
   width: 100%;
-  background-color: gray;
+  background-color: #808080;
   margin-top: 20px;
 }
 footer h3 {
