--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,6 +1,6 @@
 footer{
     width:100%;
-    background-color: gray;
+    background-color: $gris;
     margin-top:20px;
     & h3{
         text-align: left;
