--- a/sass/layout/_section.scss
+++ b/sass/layout/_section.scss
@@ -189,11 +189,11 @@ ul img{
 }
 .carre{
     background-color:$blanc;
-    width:20px; 
+    width:22px; 
     height:20px; 
     position:relative;
     top:-20px;
-    left:0;
+    left:-1px;
     z-index:0;
     transform:scaleY(1);
     transform-origin:top;
@@ -275,7 +275,7 @@ ul img{
 }
 .menu{   
     width:100%;
-    height: 235px;
+    height:auto;
     gap:10px;
     @include tablette{
         width:48%;
