--- a/sass/layout/_section.scss
+++ b/sass/layout/_section.scss
@@ -168,7 +168,7 @@ ul img{
 .carte-restaurants img{
     box-sizing:border-box;
     width:100%;
-    aspect-ratio:2;
+    aspect-ratio:2/1;
     border: 5px white solid;
     border-top-right-radius:20px;
     border-top-left-radius: 20px;
