--- a/sass/layout/_section.scss
+++ b/sass/layout/_section.scss
@@ -2,11 +2,11 @@
 @include flexbox;
 flex-direction: row;
 position:absolute;
-            top:0;
+            top:-60px;
             bottom: 0;
             left:0;
             right: 0;
-            z-index:0;
+            z-index:2;
             animation:disparition 0s 2800ms forwards;
 }
 @keyframes disparition{
@@ -103,6 +103,10 @@ position:absolute;
     border-radius:20px;
     box-shadow: 0 3px 5px 0 gray;
     transition: 0.3s;
+    &:hover{
+        background: lighten(#F2F2F2,7%);
+        box-shadow: 0 6px 15px 0 gray;
+    }
 }
 ul img{
     display:inline;
@@ -177,7 +181,7 @@ ul img{
 .texte-carte-restaurants{
     display: flex;
     flex-direction: row;
-    width: 100%;
+    width:100%;
     justify-content:space-between;
     padding:0px 16px;
     font-size:12px;
