--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,9 +1,11 @@
 header {
     display:flex;
     flex-direction:row;
-    justify-content: space-around;
+    justify-content:space-around;
+    height:63px;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15);
     & img {
-        width:200px;
-    padding:20px 0px 0px 0px;
+    width:205px;
+    margin:auto;
     }
 }
