--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -1,11 +1,15 @@
 $blanc: #fff;
 $rose: #FF79DA;
 $violet:#9356DC;
-$gris:#808080;
+$gris:#353535;
+$gris2:#EAEAEA;
 $gris-clair:#F2F2F2;
-$cyan:cyan;
+$gris-tres-clair:#F7F7F7;
+$bleuturquoise:#99E2D0;
+$bleuclair:#89C8FA;
+$bleuvert:#008766;
 $rouge:#ff0000;
 $noir: #000;
 $transparent:transparent;
-$color_: #15DEA5,#0E397F,#FF79DA,#9356DC,#ff0000,#9356DC,#FF79DA,#0E397F,#15DEA5;
+$color_: #99E2D0,#0E397F,#FF79DA,#9356DC,#ff0000,#9356DC,#FF79DA,#0E397F,#99E2D0;
 $liste-font-family:Roboto Shrikhand;
