--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -1,26 +1,34 @@
 .btn {
     @for $i from 1 through 2 {
         &--#{$i} {
-    @include police-Roboto;
+    font-family:'Roboto';
+    font-style:normal;
+    text-align:center;
     display:block;
     justify-items: center;
-    font-weight: 700;
+    height:60px;
+    font-weight:400;
     font-size: 20px;
     line-height:45px;
-    height:52px;
+    height:60px;
     color:white; 
+    background: linear-gradient(193.33deg, #9356DC -11.44%, #FF79DA 123.93%);
     background: linear-gradient(to bottom right,$rose, $violet);
     border:none;
-    border-radius: 20px;
-    box-shadow: 0 3px 15px 0 #9356DC;
+    border-radius:30px;
+    box-shadow: 0 3px 15px 0 $violet;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
     transition: 0.3s;
     &:hover{
-        background: linear-gradient(to bottom right,lighten(#FF79DA,7%),lighten(#9356DC,7%));
+        background: linear-gradient(to bottom right,lighten($rose,7%),lighten($violet,7%));
         box-shadow: 0 6px 15px 0 #9356DC;
         }
         }
     &--1{
-        margin: 15px 30%;
+        width:270px;
+        margin-left:auto;
+        margin-right:auto;
+        margin-bottom: 70px;
     }
     &--2{
         margin: 15px 15%;
