--- a/sass/layout/_form.scss
+++ b/sass/layout/_form.scss
@@ -2,29 +2,27 @@
     display:flex;
     flex-direction:row;
     justify-content:center;
+    align-items:center;
     width:100%;
-    height:49px;
-    background-color:#F2F2F2;
-    margin-top:20px;
+    height:50px;
+    background:$gris2;
+    gap:17px;
+    margin-top:4px;
 }
 .fa-location-dot{
-    width: 14px;
-    height: 18px;
-    background-color:#F2F2F2;
-    padding :16px 15px 14px 18px;  
+    width:12px;
+    height:16px;
+    scale:1.25;
+    color:$gris;
 }
 .ville-input{
-    @include police-Roboto;
-    font-weight: 700;
-    font-size: 18px;
-    line-height:21px;
+    font-family:'Roboto';
+    font-style:normal;
+    font-weight:500;
+    font-size:19px;
+    line-height:10px;
+    color:$gris;
     text-align:left;
-    padding-left:16%;
-    width: 84%;
-    height: 46px;
-    background-color:#F2F2F2;
-    border-top:1px #F2F2F2 solid;
-    border-left:none;
-    border-bottom:1px #F2F2F2 solid;
-    border-right:none;
+    border-style :none; 
+    background-color:none;
 }
